# twingraph

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  start_containers.sh
docs/: APIDoc.md  KnownIssuesLimitations.md  ManualInstallation.md  PortForwarding.md
examples/orchestration_demos/demo_10_multipipeline/: README.md  pipelineA.py  pipelineB.py  run.sh
examples/orchestration_demos/demo_1_graph_tracing/: README.md  deployment.py
examples/orchestration_demos/demo_2_docker/: Dockerfile  README.md  build_tag_docker.py  deployment.py  push_to_ecr.py
examples/orchestration_demos/demo_3_git_data/: README.md  deployment.py
examples/orchestration_demos/demo_4_celery_backend/: README.md  deployment.py
examples/orchestration_demos/demo_5_celery_K8s/: README.md  deployment.py  eks-blueprint-twingraph.yaml
examples/orchestration_demos/demo_6_celery_aws_batch/: README.md  attr.json  batchconfig.json  deployment.py
examples/orchestration_demos/demo_7_lambda/: README.md  deployment.py  lambdaconfig.json
examples/orchestration_demos/demo_8_docker_K8s_lambda_batch/: README.md  deployment.py  lambdaconfig.json
examples/orchestration_demos/demo_9_neptunedb/: README.md  deployment.py
examples/utils/: graph_queries.py  remove_credentials.py  stop_and_delete.py  update_credentials.py
tests/test_celery_batch/multi_node/: celery_pipeline_batch.py  test_celery_batch.py
tests/test_celery_docker/multi_node/: celery_pipeline_docker.py  test_celery_docker.py
tests/test_celery_k8s/multi_node/: celery_pipeline_k8s.py  test_celery_k8s.py
twingraph/: __init__.py
twingraph/docker/: docker_utils.py
twingraph/graph/: graph_tools.py
twingraph/kubernetes/: k8s_class.py
twingraph/orchestration/: orchestration_tools.py  orchestration_utils.py
(+29 files in other folders)
